# ucli

./: Cargo.toml  README.md  rules.txt
.github/: funding.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/command/: command.rs
cli/src/flags/: cat.rs  convert.rs  example.rs  grep.rs  highlight.rs  init.rs  lint.rs  ls.rs  mod.rs  parse.rs  render.rs  sort.rs  tail.rs  validate.rs  view.rs  watch.rs  wc.rs
crates/cat/: Cargo.toml  README.md
crates/cat/src/: lib.rs
crates/cat/tests/: cat_test.rs
crates/convert/: Cargo.toml
crates/convert/src/: lib.rs
crates/example/src/: lib.rs
crates/grep/: Cargo.toml  README.md
crates/grep/src/: lib.rs
crates/grep/tests/: grep_test.rs
crates/highlight/: Cargo.toml
crates/highlight/src/: lib.rs
crates/init/: Cargo.toml
crates/init/src/: lib.rs
crates/lint/: Cargo.toml
crates/lint/src/: lib.rs
crates/ls/: Cargo.toml  README.md
crates/ls/src/: lib.rs
crates/ls/tests/: ls_test.rs
crates/parse/: Cargo.toml
crates/parse/src/: lib.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs
crates/rules/: Cargo.toml
crates/rules/src/: lib.rs
crates/sort/: Cargo.toml  README.md
crates/sort/src/: lib.rs
crates/sort/tests/: sort_test.rs
crates/tail/: Cargo.toml
crates/tail/src/: lib.rs
crates/validate/: Cargo.toml
crates/validate/src/: lib.rs
crates/view/: Cargo.toml  README.md
crates/view/src/: lib.rs
crates/view/tests/: view_test.rs
crates/watch/: Cargo.toml
crates/watch/src/: lib.rs
crates/wc/: Cargo.toml  README.md
crates/wc/src/: lib.rs
crates/wc/tests/: wc_test.rs
domains/: Cargo.toml
domains/src/: lib.rs
