[package]
name = "younix"
edition.workspace = true
description.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
clap.workspace = true
ycat = { path = "../crates/cat" }
yls = { path = "../crates/ls" }
ygrep = { path = "../crates/grep" }
ysort = { path = "../crates/sort" }
yview = { path = "../crates/view" }
ywc = { path = "../crates/wc" }
