[package]
name = "younix"
edition.workspace = true
description.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
clap.workspace = true
ycat = "0.1.32"
yls = "0.1.32"
ygrep = "0.1.32"
ysort = "0.1.32"
yview = "0.1.32"
ywc = "0.1.32"
