[package]
name = "ygrep"
edition.workspace = true
description = "The grep command of the Younix application"
repository = "https://github.com/ibilalkayy/younix/tree/main/crates/grep"
version.workspace = true
license.workspace = true
readme = "README.md"
categories.workspace = true
keywords.workspace = true

[dependencies]
