[package]
name = "yls"
edition.workspace = true
description = "The ls command of the Younix application"
repository = "https://github.com/ibilalkayy/younix/tree/main/crates/ls"
version.workspace = true
license.workspace = true
readme = "README.md"
categories.workspace = true
keywords.workspace = true

[dependencies]
