[package]
name = "ysort"
edition.workspace = true
description = "The sort command of the Younix application"
repository = "https://github.com/ibilalkayy/younix/tree/main/crates/sort"
version.workspace = true
license.workspace = true
readme = "./README.md"
categories.workspace = true
keywords.workspace = true

[dependencies]
tempfile.workspace = true
