[package]
name = "yview"
edition.workspace = true
description = "The view command of the Younix application"
repository = "https://github.com/ibilalkayy/younix/tree/main/crates/view"
version.workspace = true
license.workspace = true
readme = "README.md"
categories.workspace = true
keywords.workspace = true

[dependencies]
