[package]
name = "ywc"
edition.workspace = true
description = "The wc command of the Younix application"
repository = "https://github.com/ibilalkayy/younix/tree/main/crates/wc"
version.workspace = true
license.workspace = true
readme = "./README.md"
categories.workspace = true
keywords.workspace = true

[dependencies]
